<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/width_height_m.orientation_h"
    android:layout_marginEnd="@dimen/margin_end_size"
    android:layout_marginStart="@dimen/margin_start_size"
    android:layout_marginTop="@dimen/margin_top_size"
    android:padding="@dimen/paddings_size"
   android:background="@drawable/banner_background">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        app:cardCornerRadius="@dimen/image_corner_radius">
        <ImageView
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:scaleType="centerCrop"
            android:src="@drawable/my_image"/>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_marginStart="@dimen/margin_start"
        android:layout_weight="1"
        style="@style/width_height.orientation_v">
        <TextView
            android:text="@string/name_person"
            android:textColor="@color/black"
            style="@style/width_height.font_attr.font_weight700"/>
        <TextView
            android:layout_marginTop="@dimen/margin_top_size"
            android:text="@string/cert"
            android:textColor="@color/cert_color_font"
            style="@style/width_height.font_attr.font_weight500"/>
        <LinearLayout
            style="@style/width_height_m.orientation_h"
            android:layout_marginTop="@dimen/margin_top_size">

            <ImageView
                android:layout_width="@dimen/width_location_icon"
                android:layout_height="@dimen/height_location_icon"
                android:layout_marginTop="@dimen/margin_top_location_icon"
                android:src="@drawable/ic_baseline_location_on_24"/>
            <TextView
                android:text="@string/postion"
                android:textColor="@color/color_uk"
                style="@style/width_height.font_attr.font_weight400"/>
        </LinearLayout>
        <LinearLayout
            style="@style/width_height_m.orientation_h"
            android:layout_marginTop="@dimen/margintopinfovote">
            <TextView
                android:text="@string/count_reviews"
                android:layout_marginEnd="@dimen/margin_end_text"
                android:textColor="@color/black"
                style="@style/width_height.font_attr.font_weight400"/>
            <TextView
                android:layout_marginEnd="@dimen/margin_end_text"
                android:text="@string/voit"
                android:textColor="@color/black"
                style="@style/width_height.font_attr.font_weight500"/>
            <ImageView
                android:layout_width="@dimen/star_width"
                android:layout_height="@dimen/star_height"
                android:src="@drawable/ic_baseline_star_24"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        style="@style/width_height.orientation_v"
        android:layout_weight="1">
        <TextView
            android:layout_width="@dimen/numhr"
            android:layout_height="wrap_content"
            android:text="@string/numhour"
            android:paddingStart="@dimen/padding_start_num_hr"
            android:paddingEnd="@dimen/padding_end_num_hr"
            android:paddingBottom="@dimen/padding_bottom_num_hr"
            android:paddingTop="@dimen/padding_top_num_hr"
            android:gravity="center"
            android:textColor="@color/color_3hr_label"
            style="@style/width_height.font_attr.font_weight400.layout_gravity"
            android:background="@drawable/label_hour"/>
        <TextView
            android:layout_marginTop="@dimen/padding_top_russian"
            android:text="@string/country"
            android:textColor="@color/russian_color"
            style="@style/width_height.font_attr.font_weight500.layout_gravity"/>
        <TextView
            android:layout_marginTop="@dimen/padding_top_5_day"
            android:text="@string/seen_date"
            android:textColor="@color/color_5day"
            style="@style/width_height.font_attr.font_weight400.layout_gravity"/>

    </LinearLayout>

</LinearLayout>